made .art box a fixed height and add overflow-y: auto to make it scrollable

--- a/stylesheets/LtAstyle.css
+++ b/stylesheets/LtAstyle.css
@@ -51,7 +51,8 @@ textarea{
 }
 .art-box {
     width: fit-content;
-    height: fit-content;
+    height: 400px;
+    overflow-y: auto;
     background-color:#333;
     border: whitesmoke;
     border-style: solid;
